--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -217,7 +217,7 @@
                         background-color: $secondaryBackgroundColor;
 
                         &::-webkit-inner-spin-button,
-                        &::-webkit-outter-spin-button{ //Chome
+                        &::-webkit-outter-spin-button{ //Chrome
                             -webkit-appearance: none;
                         }
 
