--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -23,6 +23,7 @@
 @import './style_components//edit_admin_content';
 @import './style_components/ticket_info';
 @import './style_components/ticket_admin';
+@import './style_components//information_screen';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
