--- a/src/style/style_components/_information_screen.scss
+++ b/src/style/style_components/_information_screen.scss
@@ -14,6 +14,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        
 
         span{
             display: flex;
@@ -23,15 +24,30 @@
         i{
             align-items: center;
             font-size: .9em;
+            cursor: pointer;
+            user-select: none;
+            color:$secondaryTextColor;
+
+            &:hover{
+                filter: brightness(1.25);
+            }
+
+
+            &:active{
+
+                animation: navClick 250ms;
+            }
+
         }
     
     }
 
     .info_data{
         box-sizing: border-box;
-        height: 150px;
-        width: auto;
-        overflow: auto;
+        max-height: 400px;
+        width: 200px;
+        overflow-y: auto;
+        overflow-x: hidden;
         display: flex;
 
         // table{
@@ -45,16 +61,71 @@
             margin: 0;
             padding: 0;
             width: 100%;
+            
+        }
+
+        .data_container{
+            display: flex;
         }
 
         li{
-            padding: 5px;
-            cursor: pointer;
+            box-sizing: border-box;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
 
+            input{
+                width: 100%;
+            }
+
+            div{
+                margin:5px;
+                overflow: auto;
+                scrollbar-width: none;
+            }
+
+            i{
+                display: none;
+                align-items: center;
+                background-color: $primaryHeaderBGColor2;
+                font-size: .8em;
+                user-select: none;
+                color:$secondaryTextColor;
+                padding: 2px;
+                border-radius: 50%;
+                margin-right: 2px;
+                justify-content: center;
+                cursor: pointer;
+
+                &:active{
+                    animation: navClick 250ms;
+                }
+
+                &:hover{
+                    filter: brightness(1.25);
+                   
+                }
+            }
+
+            &:hover{
+                i{
+                    display: flex;
+                    animation: slidein 300ms;
+
+                }
+            }
             
-            &:active{
+            @keyframes slidein {
+                0%{
+                    // transform: translateX(20px);
+                    opacity: .5;
+                }
 
-                animation: navClick 250ms;
+                100%{
+                    // transform: translateX(0px);
+                    opacity: 1;
+                }
             }
         }
 
@@ -68,9 +139,9 @@
 
         }
 
-        .active {
-            filter: brightness(1.3);
-        }
+        // .active {
+        //     filter: brightness(1.3);
+        // }
 
 
 
