--- a/src/style/style_components/_template_container.scss
+++ b/src/style/style_components/_template_container.scss
@@ -1,4 +1,4 @@
-#template_container{
+.template_container{
     margin-top: 40px;
     //this this overflow on the top container. so that if content
     //is bigger than the container it will hide it.
