--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -24,6 +24,7 @@
 @import './style_components/ticket_info';
 @import './style_components/ticket_admin';
 @import './style_components//information_screen';
+@import '../components/error/error_page';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
