--- a/src/style/style_components/_admin_page.scss
+++ b/src/style/style_components/_admin_page.scss
@@ -11,6 +11,8 @@
     min-width: 250px;
     width: fit-content;
     max-width: 100vw;
+    user-select: none;
+    outline: none;
     
     height: fit-content;
     max-height: 100vh;
