--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -27,6 +27,7 @@
 @import '../components/error/error_page';
 @import '../components/homepagecomponents/tickettemplateoptions/optionsModals/template_modals';
 @import '../components/ticket/clientorgmodal/client_org_modal';
+@import '../components//ticket//clientorgmodal/clientorgmodalcomponents/form_modal';
 //Include the animation in the variable file on the top index so others can use it.
 @include blinkclick;
 @include popupmixin;
