--- a/src/components/ticket/clientorgmodal/clientorgmodalcomponents/_form_modal.scss
+++ b/src/components/ticket/clientorgmodal/clientorgmodalcomponents/_form_modal.scss
@@ -20,11 +20,13 @@
 }
 
 .open_form_modal{
+    overflow: hidden;
     animation: heightChange 550ms linear;
 }
 
 .close_form_modal{
-    animation: heightChange 500ms reverse ease-in;
+    overflow: hidden;
+    animation: heightChangeR 350ms reverse ease-out;
 }
 
 @keyframes heightChange {
@@ -37,6 +39,20 @@
     100%{
         // transform: scaleX(1);
         max-height: 600px;
+    }
+
+}
+
+@keyframes heightChangeR {
+    0%{
+        max-height: 0px;
+        // transform: scaleX(0);
+        
+    }
+
+    100%{
+        // transform: scaleX(1);
+        max-height: 350px;
     }
 
 }
