--- a/src/components/ticket/clientorgmodal/_client_org_modal.scss
+++ b/src/components/ticket/clientorgmodal/_client_org_modal.scss
@@ -14,17 +14,16 @@
     margin-top: 15px;
     gap: 5px;
     font-family: $mainTextStyle;
-    grid-auto-flow: column;
+
 
     button{
         color: $secondaryTextColor ;
+
         padding: 5px 20px;
         font-size: 1rem;
         background-color: rgb(28, 99, 75);
         border: rgb(117, 117, 117) solid 2px;
-        max-width: 200px;
-        justify-self: flex-end;
-
+        width: 100%;
         &:hover{
             filter: brightness(1.3);
             cursor: pointer;
