--- a/src/components/ticket/clientorgmodal/_client_org_modal.scss
+++ b/src/components/ticket/clientorgmodal/_client_org_modal.scss
@@ -10,20 +10,25 @@
 
 
 .client_org_modal_button{
-    display: grid;
-    margin-top: 15px;
+    display: flex;
+    //gap still works with flex. Amazing
     gap: 5px;
     font-family: $mainTextStyle;
+    grid-auto-flow: column;
 
 
     button{
         color: $secondaryTextColor ;
-
-        padding: 5px 20px;
+        padding: 5px 10px;
         font-size: 1rem;
         background-color: rgb(28, 99, 75);
         border: rgb(117, 117, 117) solid 2px;
-        width: 100%;
+        //put a max width and then make the button flex
+        //this will make all the button have the same width
+        //As well as let it dynamically change size based on the screen
+        max-width: 75px;
+        flex: 1;
+
         &:hover{
             filter: brightness(1.3);
             cursor: pointer;
@@ -38,3 +43,4 @@
         filter: brightness(1.3);
     }
 }
+
