More refactoring component to make it reusable

--- a/src/components/ticket/clientorgmodal/_client_org_modal.scss
+++ b/src/components/ticket/clientorgmodal/_client_org_modal.scss
@@ -4,6 +4,8 @@
     //you want to use ms for duration as that is standard for javascript
    transition: max-height 10350ms;
    max-height: 800px;
+   width: 100%;
+   
 }
 
 
