--- a/src/components/ticket/clientorgmodal/clientorgmodalcomponents/_form_modal.scss
+++ b/src/components/ticket/clientorgmodal/clientorgmodalcomponents/_form_modal.scss
@@ -10,9 +10,9 @@
         margin-bottom: 5px;
     }
 
-    input:not([type='checkbox']){
+    // input:not([type='checkbox']){
   
-    }
+    // }
     
     
 
