--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -1,5 +1,12 @@
 //https://css-tricks.com/snippets/css/a-guide-to-flexbox/
 
+.main_nav_container{
+    display: flex;
+    gap: 15px;
+    color: $secondaryTextColor;
+
+}
+
 #main_nav{
     background-color: $primaryHeaderBGColor;
     display: flex;
